[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "haloop"
description = 'speech agent for 100 hours'
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
keywords = []
authors = [
  { name = "Volodymyr Kyrylov", email = "vol@wilab.org.ua" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "click",
  "g2p-en",
  "kaldialign",
  "rich",
  "torch",
  "torchaudio",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/proger/ha1#readme"
Issues = "https://github.com/proger/ha1/issues"
Source = "https://github.com/proger/ha1"

[project.scripts]
hac = "ha.loop:main"
hal = "ha.rnnlm:main"
hat = "ha.attention:main"

[tool.hatch.version]
path = "ha/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=ha --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "ha/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
